Aplicando estilo y estructura

--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -49,8 +49,8 @@
 <div
   class="position-relative mt-5 px-5 overflow-hidden text-color p-md-5 text-center"
 >
-  <h1 class="fw-normal mb-4">Bienvenido a Insinia</h1>
-  <div class="product-device d-none d-md-block">
+  <h1 class="lead mb-4">Bienvenido a Insinia</h1>
+  <div class="product-device svg-container d-none d-md-block">
     <img class="img-fluid home-hero" src="../../assets/svg/working.svg" />
   </div>
   <div class="col-md-7 p-lg-5 mx-auto mt-2">
@@ -71,17 +71,17 @@
         <div class="row">
           <div class="col-xl mb-3">
             <section class="card-home-corp">
-              <h4 class="text-light">
+              <h2 class="text-light">
                 <i class="bi bi-building me-2"></i>Organización
-              </h4>
+              </h2>
               <p>Una genial manera de manejar organizar, cambiar y editar.</p>
             </section>
           </div>
           <div class="col-xl mb-3">
             <section class="card-home-corp">
-              <h4 class="text-light">
+              <h2 class="text-light">
                 <i class="bi bi-people-fill me-2"></i>Colaboración
-              </h4>
+              </h2>
               <p>
                 La colaboración parte de nosotros y asi lo hemos implementado.
               </p>
@@ -91,9 +91,9 @@
         <div class="row">
           <div class="col">
             <section class="card-home-corp">
-              <h4 class="text-light">
+              <h2 class="text-light">
                 <i class="bi bi-hand-thumbs-up-fill me-2"></i>Facilidad de uso
-              </h4>
+              </h2>
               <p>
                 Desarrollado en mente para un uso escolar, casual y profesional.
               </p>
