--- a/src/app/user-ranking/user-ranking.component.html
+++ b/src/app/user-ranking/user-ranking.component.html
@@ -1,15 +1,34 @@
-<ag-grid-angular
-  style="width: 700px; height: 500px"
-  class="ag-theme-alpine"
-  [rowData]="rowData"
-  [columnDefs]="columnDefs"
->
-</ag-grid-angular>
 
-<ag-grid-angular
-  style="width: 700px; height: 500px"
-  class="ag-theme-alpine"
-  [rowData]="rowDatas"
-  [columnDefs]="columnDefs"
->
-</ag-grid-angular>
+
+       <div class="cards_landscape_wrap-2">
+        <div class="container">
+          <div class="row">
+  
+<div class="col-xs-12 col-sm-6 col-md-3 col-lg-5" *ngFor="let item of rankings;">
+                  
+                        <div class="card-flyer">
+                            <div class="text-box">
+                                <div class="image-box">
+                                    <img src="data:image/png;base64,{{item.logo}}"/>
+                                </div>
+                                <div class="text-container">
+                                    <h6>{{item.name}}</h6>
+                                    <p>{{item.description}}</p>
+                                </div>
+                            </div>
+                        </div>
+                      
+                    <div onGenerated class="row">
+                      <div class="col-5"></div>
+                    <ag-grid-angular 
+                      style="width: 700px; height: 500px"
+                      class="ag-theme-alpine ranking"
+                      [columnDefs]="columnDefs"
+                      [rowData]="item.rankingData"
+                      >
+                    </ag-grid-angular >
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
