Funcion para añadir rankigns por codigo

--- a/src/styles.css
+++ b/src/styles.css
@@ -33,7 +33,7 @@
 *,
 html,
 body {
-  font-family: "Circular Std Bold", sans-serif !important;
+  font-family: "Circular Std Bold", sans-serif ;
 }
 
 /* SCROLLBAR */
