--- a/src/app/user-ranking/user-ranking.component.css
+++ b/src/app/user-ranking/user-ranking.component.css
@@ -1,6 +1,50 @@
 @import "ag-grid-community/dist/styles/ag-grid.css";
 @import "ag-grid-community/dist/styles/ag-theme-alpine.css";
 
+:root{
+}
+
+.tarjetas{
+    width:30vw !important;
+}
+
+.no-rankings{
+    margin-top:3rem;
+    color: var(--corp-color-one);
+    font-family: "Circular Std Bold";
+    font-size:2rem;
+
+}
+#rankingId{
+    border-radius:0.5rem;
+    width:7.5rem !important;
+    height:3rem;
+}
+
+.btn-primary{
+    background-color: var(--corp-color-one);
+    transform: scale(1.2);
+    margin-top: -0.2rem !important;
+    border-color: var(--corp-color-one);
+    margin-left: 1rem;
+}
+.title{
+    margin-top:3rem;
+    position:absolute;
+    color: var(--corp-color-one);
+    font-family: "Circular Std Bold";
+    font-size:2rem;
+}
+.ag-center-cols-viewport{
+    overflow:hidden !important;
+}
+.ranking{
+    text-align: left !important;
+    overflow: hidden !important;
+    width: 30vw !important;
+    
+}
+
 .cards_landscape_wrap-2{
     text-align: center;
     background: #F7F7F7;
@@ -29,7 +73,7 @@
     -o-transition:all .9s ease;
     -ms-transition:all .9s ease; 
     width: 100%;
-    height: 19rem;
+    height: 28vh;
   }
  .cards_landscape_wrap-2 .card-flyer:hover .image-box img{
     opacity: 0.7;
