Enlace temporal ranking en profile

--- a/src/app/user-page/user-page.component.html
+++ b/src/app/user-page/user-page.component.html
@@ -5,7 +5,7 @@
     <p class="text-color">Insinia</p>
   </div>
   <div class="me-2">
-    <p class="text-color">lorem</p>
+    <p class="text-color"  routerLink="/rankings">Rankings</p>
   </div>
 </div>
 
