--- a/src/app/user-ranking/user-ranking.component.html
+++ b/src/app/user-ranking/user-ranking.component.html
@@ -13,7 +13,7 @@
           </a>
         </li>
         <li class="nav-item">
-          <a class="nav-link text-color" routerLink="/login">
+          <a class="nav-link text-color" routerLink="/profile">
             <i class="bi bi-person-circle"></i>
           </a>
         </li>
@@ -36,7 +36,7 @@
           </button>
         </li>
         <li class="nav-item">
-          <button class="nav-link btn" routerLink="/login">
+          <button class="nav-link btn" routerLink="/profile">
             <i class="bi bi-person-circle"></i>
           </button>
         </li>
