Commit general sin detallar

--- a/src/app/user-page/user-page.component.css
+++ b/src/app/user-page/user-page.component.css
@@ -4,6 +4,10 @@
   object-fit: cover;
 }
 
+.card-hover-primary {
+  margin-top: 8rem;
+}
+
 .form-control-loading {
   display: block;
   width: 100%;
