--- a/src/app/user-page/user-page.component.html
+++ b/src/app/user-page/user-page.component.html
@@ -1,5 +1,12 @@
 <nav
-  class="navbar navbar-expand navbar-dark bg-color position-fixed w-100 top-0 navbar-home"
+  class="
+    navbar navbar-expand navbar-dark
+    bg-color
+    position-fixed
+    w-100
+    top-0
+    navbar-home
+  "
 >
   <div class="container-fluid">
     <a class="navbar-brand" routerLink="/home">Insinia</a>
