--- a/src/app/user-page/user-page.component.css
+++ b/src/app/user-page/user-page.component.css
@@ -8,6 +8,33 @@
   margin-top: 8rem;
 }
 
+.form-control-img {
+  display: block;
+  width: 100%;
+  padding: 0.375rem 0.75rem;
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #212529;
+  background-color: #fff;
+  background-clip: padding-box;
+  border: 1px solid #ced4da;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+  border-radius: 0.25rem;
+  transition: border-color .15s ease-in-out,box-shadow .15s ease-in-out;
+}
+
+.form-control-img:hover {
+  border-color: var(--corp-color-one);
+  color: var(--corp-color-one);
+}
+
+.button-loading  {
+  height: 31px;
+}
+
 .form-control-loading {
   display: block;
   width: 100%;
@@ -22,6 +49,26 @@
   appearance: none;
   border-radius: 0.25rem;
   transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+}
+
+.loading-50 {
+  width: 50%;
+}
+
+.loading-75 {
+  width: 75%;
+}
+
+.loading-25 {
+  width: 25%;
+}
+
+.loading-10 {
+  width: 10%;
+}
+
+.hide {
+  display: none;
 }
 
 .form-control-loading:focus {
