creacion de la pagina de moderador

--- a/src/app/user-ranking/user-ranking.component.html
+++ b/src/app/user-ranking/user-ranking.component.html
@@ -43,6 +43,7 @@
     </div>
   </div>
 </nav>
+
 <div class="container">
   <h1 class="title col-6">Mis rankings</h1>
 </div>
@@ -73,52 +74,49 @@
 
 <div class="cards_landscape_wrap-2 mt-5">
   <div class="container">
-    <div class="row">
-      <div class="container no-rankings" *ngIf="nullRankings">
-        <h1>
-          No hay rankigns, puedes pedir que te unan o introducir su codigo
-        </h1>
-        <form action="post" [formGroup]="addRanking">
-          <input formControlName="rankingId" id="rankingId" type="text" />
-          <button
-            type="submit"
-            class="btn btn-primary bi bi-check-lg"
-            (click)="addRankingByCode()"
-          ></button>
-        </form>
-      </div>
-      <div *ngIf="!nullRankings" class="row">
-        <div
-          class="col-xs-12 col-sm-12 col-md-10 col-lg-5 col-12"
-          id="rankingCard"
-          #rankingCard
-          [@fadeIn]
-          *ngFor="let item of rankings"
-        >
-          <div class="card-flyer">
-            <div class="text-box">
-              <div class="image-box">
-                <img src="data:image/png;base64,{{ item.logo }}" />
-              </div>
-              <div class="text-container">
-                <h6>{{ item.name }}</h6>
-                <p>{{ item.description }}</p>
-              </div>
+    <div class="container no-rankings" *ngIf="nullRankings">
+      <h1>No hay rankigns, puedes pedir que te unan o introducir su codigo</h1>
+      <form action="post" [formGroup]="addRanking">
+        <input formControlName="rankingId" id="rankingId" type="text" />
+        <button
+          type="submit"
+          class="btn btn-primary bi bi-check-lg"
+          (click)="addRankingByCode()"
+        ></button>
+      </form>
+    </div>
+
+    <div *ngIf="!nullRankings" class="row justify-content-center">
+      <div
+        class="col-xs-10 col-sm-12 col-md-10 col-lg-5 col-12 ranking-card"
+        id="rankingCard"
+        #rankingCard
+        [@fadeIn]
+        *ngFor="let item of rankings"
+      >
+        <div class="card-flyer">
+          <div class="text-box">
+            <div class="image-box">
+              <img src="data:image/png;base64,{{ item.logo }}" />
+            </div>
+            <div class="text-container">
+              <h6>{{ item.name }}</h6>
+              <p>{{ item.description }}</p>
             </div>
           </div>
-          <div class="row">
-            <ag-grid-angular
-              class="ag-theme-alpine ranking table-responsive"
-              [columnDefs]="columnDefs"
-              [rowData]="item.rankingData"
-              id="dataTable"
-              [defaultColDef]="defaultColDef"
-              resizable="true"
-              (onGridSizeChanged)="onGridSizeChanged($event)"
-              (gridReady)="onGridReady($event)"
-            >
-            </ag-grid-angular>
-          </div>
+        </div>
+        <div class="row">
+          <ag-grid-angular
+            class="ag-theme-alpine ranking table-responsive"
+            [columnDefs]="columnDefs"
+            [rowData]="item.rankingData"
+            id="dataTable"
+            [defaultColDef]="defaultColDef"
+            resizable="true"
+            (onGridSizeChanged)="onGridSizeChanged($event)"
+            (gridReady)="onGridReady($event)"
+          >
+          </ag-grid-angular>
         </div>
       </div>
     </div>
