--- a/src/app/not-found/not-found.component.html
+++ b/src/app/not-found/not-found.component.html
@@ -19,10 +19,10 @@
             <div class="row justify-content-center text-center">
                 <div class="col title">
                     <i class="bi bi-cloud-lightning-rain-fill float"></i>
-                    <div class="subtitle">ERROR 404</div>
+                    <div class="subtitle mt-5">ERROR 404</div>
                 </div>
             </div>
-            <div class="row text-center">
+            <div class="row mt-5 text-center">
                 <h5>La página que intentas acceder no existe.</h5>
             </div>
             <div class="row text-center mt-3">
