--- a/src/app/user-ranking/user-ranking.component.css
+++ b/src/app/user-ranking/user-ranking.component.css
@@ -1,6 +1,17 @@
 @import "ag-grid-community/dist/styles/ag-grid.css";
 @import "ag-grid-community/dist/styles/ag-theme-alpine.css";
 
+.body {
+  background: #f7f7f7;
+}
+
+.ranking-image {
+  /* width: 5rem !important;
+  height: 5rem !important;
+  position: absolute;
+  left: 50%; */
+  transform: scaleX(0.99);
+}
 .add-ranking-title {
   min-width: 10rem;
   position: relative;
@@ -68,8 +79,8 @@
 .ranking {
   text-align: left !important;
   overflow: hidden !important;
-  width: 40rem;
-  height: 21rem;
+  width: auto;
+  height: 25rem;
 }
 
 .cards_landscape_wrap-2 {
@@ -100,16 +111,18 @@
   -o-transition: all 0.9s ease;
   -ms-transition: all 0.9s ease;
   width: 100%;
-  height: 28vh;
+  height: 42vh;
+  background-size: cover;
+  background-repeat: no-repeat;
 }
-.cards_landscape_wrap-2 .card-flyer:hover .image-box img {
+/* .cards_landscape_wrap-2 .card-flyer:hover .image-box img {
   opacity: 0.7;
   -webkit-transform: scale(1.15);
   -moz-transform: scale(1.15);
   -ms-transform: scale(1.15);
   -o-transform: scale(1.15);
   transform: scale(1.15);
-}
+} */
 .cards_landscape_wrap-2 .card-flyer .text-box {
   text-align: center;
 }
@@ -126,7 +139,7 @@
   transition: all 0.2s ease-in;
   box-shadow: 0px 3px 4px rgba(0, 0, 0, 0.4);
 }
-.cards_landscape_wrap-2 .card-flyer:hover {
+/* .cards_landscape_wrap-2 .card-flyer:hover {
   background: #fff;
   box-shadow: 0px 15px 26px rgba(0, 0, 0, 0.5);
   -webkit-transition: all 0.2s ease-in;
@@ -135,7 +148,7 @@
   -o-transition: all 0.2s ease-in;
   transition: all 0.2s ease-in;
   margin-top: 50px;
-}
+} */
 .cards_landscape_wrap-2 .card-flyer .text-box p {
   margin-top: 10px;
   margin-bottom: 0px;
